forestx-rs/tui/src/bottom_pane/snapshots/forestx_tui__bottom_pane__feedback_view__tests__feedback_upload_consent_lists_windows_sandbox_log_when_included.snap
---
source: tui/src/bottom_pane/feedback_view.rs
assertion_line: 746
expression: rendered
---
Upload logs?

The following files will be sent:
  • forestx-logs.log
  • forestx-doctor-report.json
  • forestx-apps-tools-cache.json (if available)
  • forestx-app-directory-cache.json (if available)
  • windows-sandbox.log
  • rollout.jsonl
  • auto-review-rollout.jsonl
